--- a/ios-chatting-app/ios-chatting-app/Info.plist
+++ b/ios-chatting-app/ios-chatting-app/Info.plist
@@ -2,18 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSContactsUsageDescription</key>
-	<string>이 앱은 연락처 권한이 필요합니다.</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>이 앱은 위치 권한이 필요합니다.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>이 앱은 마이크 접근 권한이 필요합니다.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>이 앱은 사진앨범 권한이 필요합니다.</string>
-	<key>NSAppleMusicUsageDescription</key>
-	<string>이 앱은 동영상앨범 권한이 필요합니다.</string>
-	<key>NSCameraUsageDescription</key>
-	<string>이 앱은 카메라 권한이 필요합니다.</string>
+	<key>CFBundleIconName</key>
+	<string>AppIcon</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
