--- a/ios-chatting-app/Podfile
+++ b/ios-chatting-app/Podfile
@@ -20,6 +20,7 @@ pod 'IQAudioRecorderController'
 
 pod 'JSQMessagesViewController', '7.3.3'
 pod 'IDMPhotoBrowser'
+pod 'RNCryptor'
 
 #pod 'ImagePicker'
 
