💄 [UI] : 통화목록 화면 기능구현 - FirebaseStore저장

--- a/ios-chatting-app/Podfile
+++ b/ios-chatting-app/Podfile
@@ -21,6 +21,7 @@ pod 'IQAudioRecorderController'
 pod 'JSQMessagesViewController', '7.3.3'
 pod 'IDMPhotoBrowser'
 pod 'RNCryptor'
+#pod 'OneSignal'
 
 #pod 'ImagePicker'
 
